add msi builder with github actions